       show the log info in the tooltips. (Stefan)
- BUG: If the repobrowser is started with an url having a trailing slash,
       an empty-named directory was shown below the real directory. (Stefan)
- BUG: The statistics by date were shown messed up if the log messages were
       not sorted by revision in the log dialog. (Stefan)
- CHG: The "break lock" entry is shown in the change-for-modifications context
       menu for added files too if it has a remote lock. This is a workaround
       for http://subversion.tigris.org/issues/show_bug.cgi?id=2507. (Stefan)
- CHG: The "next 100" button is disabled if the log messages are not sorted
       by revision in descending order in the log dialog. (Stefan)

Version 1.4.1
- NEW: TortoiseMerge can now handle files with CR lineendings. (Stefan)
- NEW: TortoiseProc passes the parameter "/line:XXXX" to TortoiseBlame
       to improve issue #214. (Stefan)
- CHG: If a bug ID is specified multiple times in a log message, the log
       dialog now shows each ID only once in the bug ID column. (Stefan)
- CHG: The bug ID column in the log dialog is now shown if the
       bugtraq:url is empty but the bugtraq:logregex is set. (Stefan)
- CHG: When ignoring file(s) failed, the error message from Subversion is
       shown in full instead of just the simple message telling that it
       failed. (Stefan)
- CHG: The root directory in the CSVNStatusListCtrl is shown as "." instead
       of an empty string. (Kazutoshi Satoda)
- BUG: When the bugtraq:message was set to "%BUGID%" only and the 
       bugtraq:number was set to "true", the log message from the
       'recent log messages' was inserted into the bug ID field instead of
       the log message field in the commit dialog. (Stefan)
- BUG: When saving a property over an existing and in-use file an exception
       was thrown. (Stefan)
- BUG: When columns were hidden in the various dialogs using the status
       control, the redrawing on the right end was sometimes wrong.